# docker_model_demo

./: README.md  main.py  pyproject.toml
data/: db.json
